--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,6 +5,7 @@ display: block;
 body {
 display: block;
 margin: 8px;
+background: "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSNGKv-CivT5ptwhvQUArHObtNxMcoQjWdz_PzO32qiW7nYFzudpaSv_9k";
 }
 
 .example-chat {
