--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,7 +5,7 @@ display: block;
 body {
 display: block;
 margin: 8px;
-background-image: "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSNGKv-CivT5ptwhvQUArHObtNxMcoQjWdz_PzO32qiW7nYFzudpaSv_9k";
+background: "http://funmozar.com/wp-content/uploads/2014/09/Cloud-Wallpaper-03.jpg";
 }
 
 .example-chat {
