--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,7 +5,7 @@ display: block;
 body {
 display: block;
 margin: 8px;
-background: "http://funmozar.com/wp-content/uploads/2014/09/Cloud-Wallpaper-03.jpg";
+background: black;
 }
 
 .example-chat {
